--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,11 @@ h5 {
 h3 {
     color: palevioletred;
 }
+.submit-button {
+    color: black;
+    border-color: pink;
+    background-color: pink;
+}
 
 .container {
     height: 70vh;
@@ -50,11 +55,57 @@ h3 {
     margin-bottom: 30px;
 }
 .container-best-seller {
-    height: 100vh;
+    height: 130vh;
     background-color: pink;
     margin-top: 50px;
+    justify-content: center;
 }
-.section-service {
-    margin-top: 10px;
+.section-service .box{
+    display: flex;
+    height: 30px;
+    justify-content: center;
+    align-items: center;
+    color: palevioletred;
+}
+.section-service{
+    margin-top: 30px;
+}
+.section-service .service-box{
+    padding: 30px;
+    text-align: center;
+}
+.icon-service {
+    font-size: 30px;
     margin-bottom: 10px;
+}
+.service-image {
+    width: 250px;
+    height: 200px;
+    text-align: center;
+}
+
+
+
+.baking-background {
+    height: 10vh;
+    background-size: cover !important;
+    background-position: center center !important;
+}
+
+
+.text-center {
+    margin-bottom: 30px;
+}
+
+.contact-us {
+    justify-content: center;
+    margin-bottom: 20px;
+    text-align: center;
+}
+.col-6:hover {
+    background-color: palevioletred;
+    color: white;
+}
+.social-media-icons {
+    font-size: 50px;
 }
