--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 body {
     font-family: 'Montserrat', sans-serif;
 }
+body p {
+    line-height: 1.8em;
+    color: #666;
+}
 .nav-item:hover {
     opacity: 0.8;
     background: pink;
@@ -22,10 +26,14 @@ body {
     flex-direction: column;
     justify-content: center;
     color: black;
-    font-size: 30px;
+    font-size: 1.4em;
 }
 .slider-home .carousel-item .background-image {
     opacity: 0.6;
+    height: 100vh;
+    background-size: cover !important;
+    background-position: center center !important;
+    background-repeat: no-repeat !important;
 }
 h5 {
     font-size: 30px;
@@ -44,10 +52,16 @@ h3 {
     border-color: pink;
     background-color: pink;
 }
-
-.container {
-    height: 70vh;
+.submit-button:hover {
+    opacity: 0.8;
+    color: black;
+    border-color: pink;
+    background-color: pink;
 }
+
+/* .container {
+    height: 70vh;
+} */
 
 .best-seller {
     text-align: center;
@@ -55,10 +69,12 @@ h3 {
     margin-bottom: 30px;
 }
 .container-best-seller {
-    height: 130vh;
+    min-height: 800px;
     background-color: pink;
     margin-top: 50px;
     justify-content: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 .section-service .box{
     display: flex;
@@ -79,9 +95,13 @@ h3 {
     margin-bottom: 10px;
 }
 .service-image {
-    width: 250px;
-    height: 200px;
     text-align: center;
+    height: 150px;
+    overflow: hidden;
+    margin-bottom: 50px;
+}
+.service-image img {
+    width: 250px;
 }
 
 
@@ -101,7 +121,10 @@ h3 {
     margin-bottom: 20px;
     text-align: center;
 }
-.col-6:hover {
+.image-hover {
+    padding: 20px;
+}
+.image-hover:hover {
     background-color: palevioletred;
     color: white;
 }
